[gd_scene load_steps=15 format=3 uid="uid://c3jaicyfenv8d"]

[ext_resource type="Script" path="res://assets/scripts/knight_enemy.gd" id="1_41vte"]
[ext_resource type="ArrayMesh" uid="uid://c4km5b01dotk8" path="res://assets/models/Characters/knight.obj" id="1_crb58"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1j88o"]
radius = 0.325596
height = 2.06095

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vph5q"]
transparency = 1
albedo_color = Color(1, 0, 0, 0)

[sub_resource type="Animation" id="Animation_ehwyi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 0.999999, 0.999999)]
}

[sub_resource type="Animation" id="Animation_jxw5w"]
resource_name = "birth"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1, 0.999999, 0.999999)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5, 0.7, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.139838, -1.19209e-07, 0.0116193), Vector3(0.21389, 0.0137191, -0.0122802), Vector3(-0.101537, 0.0137191, 0.333584), Vector3(0.396357, 0.0361395, 0.301189), Vector3(-0.573423, 0.0361395, 1.37495), Vector3(-1.05831, 0.0361395, -0.169325), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_6blpq"]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.7, 0.9, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0.33878, 0), Vector3(0, 0.33878, 0), Vector3(0, -2.08231, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.7, 0.9, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.497419, 0, 0), Vector3(-0.497419, 0, 0), Vector3(1.5708, 0, 0), Vector3(1.5708, 0, 0), Vector3(1.5708, 0, 0)]
}

[sub_resource type="Animation" id="Animation_rd5yj"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.211063, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0.142105), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.07624, 0.23), Vector3(0, 0, 0), Vector3(-0.206719, 0.808927, 0.048568), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_e58r0"]
resource_name = "walking"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, -0.514087), Vector3(0, 0, 0.443785), Vector3(0, 0, -0.514087)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ayfw7"]
_data = {
"RESET": SubResource("Animation_ehwyi"),
"birth": SubResource("Animation_jxw5w"),
"death": SubResource("Animation_6blpq"),
"idle": SubResource("Animation_rd5yj"),
"walking": SubResource("Animation_e58r0")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xs0vn"]

[sub_resource type="Animation" id="Animation_v0um4"]
resource_name = "Damage"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Origin/Knight:material_overlay:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_13akv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Origin/Knight:material_overlay:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q0aqw"]
_data = {
"Damage": SubResource("Animation_v0um4"),
"RESET": SubResource("Animation_13akv")
}

[node name="Knight" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0, 0, 0)
collision_layer = 5
script = ExtResource("1_41vte")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1.5547, 0, 1, 0, -1, 0, -6.79581e-08, 0, 1.03852, 0.0919301)
shape = SubResource("CapsuleShape3D_1j88o")

[node name="Origin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0, 0, 0)

[node name="Knight" type="MeshInstance3D" parent="Origin"]
transform = Transform3D(-0.00286237, 0, 0.999997, 0, 1, 0, -0.999996, 0, -0.00286238, -0.0368984, 0.00465132, 0.124362)
material_overlay = SubResource("StandardMaterial3D_vph5q")
mesh = ExtResource("1_crb58")
skeleton = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Origin")
libraries = {
"": SubResource("AnimationLibrary_ayfw7")
}

[node name="HostileDetector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="HostileDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_xs0vn")

[node name="attackDelay" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="DamageAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q0aqw")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="HostileDetector" to="." method="_on_hostile_detector_body_entered"]
